Stop images from growing too large on wide screens

--- a/assets/styles/screen.css
+++ b/assets/styles/screen.css
@@ -95,3 +95,9 @@ footer {
   position: relative;
   width: 80vw;
 }
+
+@media screen and (min-width: 800px) {
+  .portfolio img {
+    width: 640px;
+  }
+}
